--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "test": "live-server --open=./SpecRunner.html --port=8081",
-    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"
+    "test": "live-server --open=./SpecRunner.html --open=./index.html --port=8081",
+    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
+    "start": "npm install -g babel-cli && babel . --out-dir compiled --presets=react --ignore=node_modules,compiled --source-maps inline --watch src"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
